# mjpeg-streamer-rs

./: Cargo.toml  README.md
src/: main.rs
src/camera/: mod.rs
