[package]
name = "mjpeg-streamer-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
v4l = { version = "0.14.0", features = ["v4l2"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
env_logger = "0.11.8"
log = "0.4.28"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }